# vacancies_parser

./: .gitignore  drafts.json  main.py  pyproject.toml  readme.md
classes/: area_finder.py  hh_requests_sender.py  json_processor.py  params_creator.py  params_creator_for_request.py  request_sender.py  super_job_request_sender.py  vacancy.py
classes/area_finder/: ABC_area_finder.py  HHarea_finder.py  SJarea_finder.py
classes/json_processor/: json_processor.py
classes/params_creator/: ABC_params_creator.py  HH_params_creator.py  SJ_params_creator.py
classes/requests_sender/: hh_requests_sender.py  requests_sender.py  super_job_request_sender.py
classes/vacancy/: vacancy.py
functions/: get_help.py  show_favorites.py  show_vacancies.py
json_responses/: favorite.json  hh_response_logs.json  sj_response_logs.json
